force-app/main/default/objects/Main_number__c/Main_number__c.object-meta.xml
<CustomObject>
    <description>TSFDK-230 Used to TP/TPX activation where a list of number series needs to be transferred</description>
    <label>Number Series Main Number</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Number Series Main Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Number Series Main Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>