force-app/main/default/objects/Main_number__c/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicated to which activation the number series is related to</inlineHelpText>
    <label>Activation</label>
    <referenceTo>Activation__c</referenceTo>
    <relationshipName>Number_series</relationshipName>
    <type>Lookup</type>
</CustomField>