force-app/main/default/objects/Main_number__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Number Series Main Number</relationshipLabel>
    <relationshipName>Number_Series_Main_Number</relationshipName>
    <type>Lookup</type>
</CustomField>