force-app/main/default/objects/Main_number__c/fields/Main_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Number__c</fullName>
    <description>TSFDK-230 Main number, parent of Number Series Range</description>
    <label>Main Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>