force-app/main/default/objects/Main_number__c/fields/Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power of Attorney</label>
    <referenceTo>Porting__c</referenceTo>
    <relationshipName>Number_Serie_Main_Number</relationshipName>
    <type>Lookup</type>
</CustomField>