force-app/main/default/objects/Main_number__c/validationRules/Main_Number_must_consist_of_8_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Main_Number_must_consist_of_8_digits</fullName>
    <active>true</active>
    <description>The main number must consist of 8 digits</description>
    <errorConditionFormula>LEN(Main_Number__c) &lt;&gt; 8  || 
NOT(ISNUMBER( Main_Number__c ))</errorConditionFormula>
    <errorDisplayField>Main_Number__c</errorDisplayField>
    <errorMessage>The main number must consist of 8 digits.</errorMessage>
</ValidationRule>